Fixed text overflow issue in Contact sub-heading, adjusted positioning of FAQ carousel content for tablet and added Font Awesome icons to FAQ for mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -543,8 +543,16 @@ a.nav-link {
     text-align: left;
     margin-top: 4px;
     letter-spacing: 0.3px;
-    line-height: 1.5;
+    line-height: 1.2;
     margin-bottom: 4px;
+}
+
+.card-header button i {
+    font-size: 1rem;
+}
+
+.card-header h5 button::first-letter {
+    font-size: 1rem;    
 }
 
 .card-header button:hover {
@@ -561,12 +569,21 @@ a.nav-link {
     background-color: rgba(41, 39, 34, 0.9);
 }
 
+.faq {
+    width: 100%;
+    position: relative;
+}
+
 .carousel {
     width: 100%;
     height: 75vh;
     border: 1px solid rgba(41, 39, 34, 0.9);
     color: black;
     background-color: rgba(41, 39, 34, 0.75);
+}
+
+.carousel-inner {
+    
 }
 
 .carousel-inner,
@@ -577,8 +594,10 @@ a.nav-link {
 
 .carousel-caption {
     text-align: left;
-    left: 10%;
-    right: 10%;
+    position: absolute;
+    width: 86%;
+    left: 7%;
+    top: 0;
 }
 
 .carousel-control-next, .carousel-control-prev {
@@ -591,7 +610,7 @@ a.nav-link {
 
 .faq-question h5 {
     color: goldenrod;
-    font-size: 1rem;
+    font-size: 1.2rem;
 }
 
 .faq-answer {
@@ -797,8 +816,8 @@ a.nav-link {
     padding-bottom: 5px;
     margin-bottom: 5px;
     font-weight: 500;
-    padding-right: 15px;
-    padding-left: 15px;
+    padding-right: 12px;
+    padding-left: 12px;
 }
 
 .mofhicons {
